fixed TMDB_API paging, implemented it within django template

--- a/dlockdottech/RecentMediaScraper/templates/RecentMediaScraper/index.html
+++ b/dlockdottech/RecentMediaScraper/templates/RecentMediaScraper/index.html
@@ -1,7 +1,7 @@
 {% if latest_movie_list %}
     <ul>
-    {% for question in latest_movie_list %}
-        <li><a href="/RecentMediaScraper/{{ question.id }}/">{{ question.title }}</a></li>
+    {% for latest_movie_list in latest_movie_list %}
+        <li><a href="/RecentMediaScraper/{{ movie.id }}/">{{ movie.title }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
