--- a/dlockdottech/RecentMediaScraper/templates/RecentMediaScraper/index.html
+++ b/dlockdottech/RecentMediaScraper/templates/RecentMediaScraper/index.html
@@ -1,9 +1,34 @@
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    {% load staticfiles %}
+    <link rel="stylesheet" href="{% static "RMS/css/normalize.min.css" %}">
+    <link rel="stylesheet" href="{% static "RMS/css/main.css" %}">
+
+    <script src="{% static "RMS/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" %}"></script>
+</head>
 {% if latest_movie_list %}
     <ul>
     {% for movie in latest_movie_list %}
-        <li><img src="{{ poster_prefix }}/{{ movie.poster_path }}/"/>{{ movie.title }}</li>
+        <li>
+            <div class="movie">
+                <img class="movie_img" src="{{ poster_prefix }}/{{ movie.poster_path }}"/>
+                <p class="movie_title"> {{ movie.title }} {{ movie.vote_average }}</p>
+                <p class="movie_overview">{{ movie.overview }} </p>
+            </div>
+        </li>
     {% endfor %}
     </ul>
 {% else %}
     <p>No media is available.</p>
 {% endif %}
+</html>
