added deployment instructions

--- a/dlockdottech/RecentMediaScraper/templates/RecentMediaScraper/index.html
+++ b/dlockdottech/RecentMediaScraper/templates/RecentMediaScraper/index.html
@@ -16,12 +16,7 @@
 
     <script src="{% static "RMS/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" %}"></script>
 </head>
-<!-- IDEAS for UI
-    Translate ratings into stars
-    Organize title and rating to be horizontal from image, near the top
-    bold title
-    decide standard overview length, or truncate overview but expand to full overview onclick
- -->
+<!--  Translate ratings into stars-->
 {% if latest_movie_list %}
     
     {% for movie in latest_movie_list %}
